@@ -1,4 +1,5 @@
 v0.07.3
+* Implemented low sampling density for ImageBasedLight in fixed mode
 * Added PerlinModifier
 * Bug fix to writeVerbatimString() in binary scene writer
 * Added sampler choice to image block in .sc parser
